--- a/docker/Dockerfile.bot
+++ b/docker/Dockerfile.bot
@@ -1,13 +1,20 @@
-FROM golang:1.22-bookworm AS build
-WORKDIR /src
-COPY go.mod go.sum ./
-RUN go mod download
-COPY . .
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o /out/bot ./cmd/bot
-
-FROM debian:12-slim
-RUN apt-get update && apt-get install -y --no-install-recommends ca-certificates curl && rm -rf /var/lib/apt/lists/*
-COPY --from=build /out/bot /usr/local/bin/bot
-EXPOSE 8080
-USER 10001
-ENTRYPOINT ["bot"]
+# ---- build stage ----
+    FROM golang:1.22-bookworm AS build
+    WORKDIR /src
+    COPY go.mod go.sum ./
+    RUN go mod download
+    COPY . .
+    
+    # Make build respect target platform
+    ARG TARGETOS
+    ARG TARGETARCH
+    RUN CGO_ENABLED=0 GOOS=${TARGETOS} GOARCH=${TARGETARCH} go build -o /out/bot ./cmd/bot
+    
+    # ---- runtime ----
+    FROM debian:12-slim
+    RUN apt-get update && apt-get install -y --no-install-recommends ca-certificates curl && rm -rf /var/lib/apt/lists/*
+    COPY --from=build /out/bot /usr/local/bin/bot
+    EXPOSE 8080
+    USER 10001
+    ENTRYPOINT ["bot"]
+    
