--- a/docker/Dockerfile.worker
+++ b/docker/Dockerfile.worker
@@ -1,15 +1,23 @@
-FROM golang:1.22-bookworm AS build
-WORKDIR /src
-COPY go.mod go.sum ./
-RUN go mod download
-COPY . .
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o /out/worker ./cmd/worker
-
-FROM debian:12-slim
-RUN apt-get update && apt-get install -y --no-install-recommends ca-certificates ffmpeg exiftool && rm -rf /var/lib/apt/lists/*
-WORKDIR /app
-COPY --from=build /out/worker /usr/local/bin/worker
-RUN useradd -u 10001 app && mkdir -p /data && chown -R app:app /data
-VOLUME ["/data"]
-USER app
-ENTRYPOINT ["worker"]
+# ---- build stage ----
+    FROM golang:1.22-bookworm AS build
+    WORKDIR /src
+    COPY go.mod go.sum ./
+    RUN go mod download
+    COPY . .
+    
+    ARG TARGETOS
+    ARG TARGETARCH
+    RUN CGO_ENABLED=0 GOOS=${TARGETOS} GOARCH=${TARGETARCH} go build -o /out/worker ./cmd/worker
+    
+    # ---- runtime ----
+    FROM debian:12-slim
+    RUN apt-get update && apt-get install -y --no-install-recommends ca-certificates ffmpeg exiftool && rm -rf /var/lib/apt/lists/*
+    WORKDIR /app
+    COPY --from=build /out/worker /usr/local/bin/worker
+    
+    # data volume for outputs/temps
+    RUN useradd -u 10001 app && mkdir -p /data && chown -R app:app /data
+    VOLUME ["/data"]
+    USER app
+    ENTRYPOINT ["worker"]
+    
