feat: add comprehensive logging system with structured logs and file persistence
- Add structured logging with context fields (session ID, user ID) to bot and worker
- Implement zerolog integration with environment-based configuration
- Add logging for key UI events: message reception, video collection, format selection, amount validation
- Capture ffmpeg output without spamming using debug-level logging
- Configure logging via environment variables (LOG_LEVEL, LOG_FORMAT, LOG_FILE)
- Add file logging support with volume mounts in docker-compose.yml
- Update docker-compose.yml with logging environment variables and volume mounts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,14 @@ services:
       context: .
       dockerfile: docker/Dockerfile.bot
     env_file: .env
+    environment:
+      - LOG_FORMAT=json
+      - LOG_LEVEL=info
+      - LOG_FILE=/var/log/uniqueizer/bot.log
     depends_on: [redis]
     restart: unless-stopped
+    volumes:
+      - ./logs:/var/log/uniqueizer
     healthcheck:
       test: ["CMD","curl","-f","http://localhost:8080/health"]
       interval: 10s
@@ -22,9 +28,14 @@ services:
       context: .
       dockerfile: docker/Dockerfile.worker
     env_file: .env
+    environment:
+      - LOG_FORMAT=json
+      - LOG_LEVEL=info
+      - LOG_FILE=/var/log/uniqueizer/worker.log
     depends_on: [redis]
     restart: unless-stopped
     volumes:
+      - ./logs:/var/log/uniqueizer
       - data:/data
     deploy:
       resources:
